css/custom.css
@font-face {
  font-family: 'hensa';
  src: url("../fonts/hensa.otf") format('opentype'), 
       url("../fonts/hensa.ttf") format('truetype');
}
@font-face {
  font-family: 'kitten';
  src: url("../fonts/Kitten Swash-trial.ttf") format('opentype');
  /*true type for ttf*/
}


body, html  {
    margin:0;
    padding: 0;
}

body {
    font-family: 'work sans', sans-serif !important;
}


a {
    text-decoration: none;
    color:#000;
    -webkit-transition: all .6s ease-in;
    transition: all .3s ease;
}

a:visited, a:hover, a:link, a:active, .project-box a:active , p a:hover{
    text-decoration: none;
    color: #48c9a0;

}

hr {
    border-top: 2px solid #4a1dff !important;
    width: 50px;
    margin-top: 0 !important;

}

#links a {
    color:#4a1dff;
    font-size: 20px;
    padding:12px;
    
}

.project-box a {
    color: #8ed5c3;
    font-size: 16px;

}

.project-box a:hover {
    text-decoration: none;
    color: #8ed5c3 ;
}

a .project-inner:hover {
    -webkit-transition: all .6s ease-out;
    background-color: #e1f7f1;
}

.hero-container a:hover, .footer a:hover {
    text-decoration: none;
    color: #000;
}

.hero-container h1 {
/*im amy*/
    margin-bottom: 0em;
    /*text-shadow: 2px 2px 0px #fff , 6px 6px 0px #b8e6db;*/
    font-size: 100px;
    color:#4a1dff;
    width: 100%;
    font-family: 'hensa', 'work sans';
    font-weight: 900;
    white-space: nowrap

}
.hero-container h2 {
/*hello*/
    color: #000;
    font-family: 'work sans', sans-serif;
    font-size: 20px;
    font-weight: 600;

}
.hero-container h3, .hero-container a, .footer a {
/*contact me*/
    color: #000;
    padding: 0;
    text-decoration: none;
    margin: 0 auto;
    font-family: 'work sans', sans-serif;
    font-size: 17px


}


.hero-container {
    height: 100vh;
    /*background: url("../images/02.jpg");*/
    background-position: 78% 83%;
    background-color: #fff;
    width: 100%;

}


#hero-content {
    height: 320px;
    width: 320px;
    /*background: -webkit-linear-gradient(#000,#777);*/
    /*border: 9px solid #000;*/
}


.center-screen{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);

}

.h-center {
    /*was used for icons*/
    display:block;
    text-align: center;
    margin-left:auto;
    margin-right:auto;
    
}

.icon {
    /*adjusts icon size and padding*/
    width: 36px;
    height: auto;
    padding: 0px 0 40px 0;
}

.butn {
    display: inline-block;
    margin: 0px 0 30px 0;
    /*-webkit-border-radius: 50px;*/
    /*border-radius: 50px;*/
    padding: 10px 0px;
    border-bottom: 2px solid #000 !important;


}

.about {
    padding: 40px 0;
    background-color: #fafafa;
}

.section-padding{
    padding: 80px 0;

}

.bio .row {
    padding: 0 34px;
}

.section-header {
    color:#4a1dff;
    text-align: center;
    float: none;
    font-family: 'hensa', 'work sans';
    margin: 0 auto;
    font-size: 50px;
    /*line-height: 90px;*/
    padding: 20px 0 30px 0;

}

.portfolio {
    background: -webkit-linear-gradient(#fff, #f0fcf9); 
    background: -o-linear-gradient(#fff, #f0fcf9); 
    background: -moz-linear-gradient(#fff,#f0fcf9); 
    background: linear-gradient(#fff, #f0fcf9); 
    padding: 100px 0;
}

.project-header{
    font-family: 'work sans', sans-serif;
    color: #4bb39a;
    font-size: 21px;
    font-weight: 600;
}
.portfolio p {
    color:  #8ed5c3 ;
    font-size: 16px;
}

.bio p {
    line-height: 32px;
    font-size: 16px;

}

.project-box {
    padding: 10px;
}

.project-inner {
    border: 1px solid #85ebd2;
    margin:10px; 
    height: 250px; 
    padding:30px 40px;
}

.footer .butn {
    text-align: center;
    margin: 0 auto;
    display: table;
}

.footer h3 {
    padding: 0;
    margin: 0;
    font-weight: 600;
}

.footer p {
    color:#43c9a9;
    padding-top: 30px;
    font-size: 16px;
}


.row.is-flex {
    display: flex;
    flex-wrap: wrap;
}
.row.is-flex > [class*='col-'] {
    display: flex;
    flex-direction: column;
}

/*
* And with max cross-browser enabled.
* Nobody should ever write this by hand. 
* Use a preprocesser with autoprefixing.
*/
.row.is-flex {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
}

.row.is-flex > [class*='col-'] {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
}




/*Specific to Ps.html*/

.content{
    margin: 80px;
    padding: 80px;
    background-color: #fff;
}

.content p {
    font-size: 16px;
    line-height: 32px;
}

.page-container {
    background-color: #e9fcf6;
    margin: 0;
}

.home {
    font-size:16px;
    margin: 20px;
    color: black;
}

.screenshot {
    width: 100%;
}
.eatlistr-screenshot {
    margin: 0 auto;
    max-width: 400px;
    padding: 25px 0;
    border: 1px dashed #aee0d0;
}

.ps-logo {
    width: 400px;
    padding: 50px 0;
}
/*End Ps.html CSS*/



/*media queries*/
@media screen and (max-width: 1024px){
}

@media screen and (max-width: 768px){
    .content {
        margin:40px;
        padding: 70px 40px;
    }
}

@media screen and (max-width: 640px){
}

@media screen and (max-width: 480px){

      .hero-container h1 {
    /*im amy*/
    font-size: 56px;
    }

    .section-header {
        font-size: 38px;
    }

    .project-inner {
        padding:10px 30px;
    }

    .content {
        margin: 0px;
        padding: 20px;
    }

    .butn {
    font-size: 14px;

    }
    .ps-logo {
    width: 200px;
    padding: 20px 0;
    }
}

@media screen and (max-width: 360px){
}

@media screen and (max-width: 320px){
}

